tasks are now draggable, fixed bug where you would drag all tasks at them same time. still wokring out bug where it doesnt save the positon of the cards after deleting a card.

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -13,5 +13,7 @@ body {
 
 .task-card:hover {
   cursor: grab;
-  cursor: grabbing;
+}
+.task-card.ui-draggable-dragging {
+  z-index: 1000; /* Set a high z-index value to bring the dragged task card to the front */
 }
